# visid

./: README.md  pyproject.toml
examples/: duffing.py
src/visid/: common.py  estimators.py  gvi.py  modeling.py  sde.py  stats.py  vi.py
src/visid/benchmark/: __init__.py  arggroups.py  linear.py
