[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visid"
version = "0.1.dev0"
authors = [
  { name="Dimas Abreu Archanjo Dutra", email="dimas.dutra@mail.wvu.edu" },
]
description = "Variational inference system identification."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "numpy",
  "scipy",
  "jax",
  "hedeut",
]

[project.optional-dependencies]
cpu = ["jax[cpu]"]
devextra = [
  "ipython",
  "ipdb",
  "matplotlib",
  "optax",
]

[project.urls]
Repository = "https://github.com/dimasad/visid"
