[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visid"
version = "0.1"
authors = [
  { name="Dimas Abreu Archanjo Dutra", email="dimas.dutra@mail.wvu.edu" },
]
description = "Variational inference system identification."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "flax",
  "hedeut",
  "jax",
  "jax_dataclasses",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
devextra = [
  "ipython",
  "ipdb",
  "matplotlib",
  "optax",
]

[project.urls]
Repository = "https://github.com/dimasad/visid"
